[gd_scene load_steps=5 format=3 uid="uid://b3jvtju0j6jbw"]

[ext_resource type="Script" uid="uid://c7lldrpvnovhr" path="res://CharacterBody2D.gd" id="1_q3486"]
[ext_resource type="AudioStream" uid="uid://b0nd0klukmgqv" path="res://audio/shot.mp3" id="4_ri2oi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85roy"]
size = Vector2(22, 38)

[sub_resource type="CircleShape2D" id="CircleShape2D_sweqy"]
radius = 64.0078

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_q3486")

[node name="Label" type="Label" parent="."]
offset_top = 58.0
offset_right = 22.0
offset_bottom = 81.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, 19)
shape = SubResource("RectangleShape2D_85roy")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ri2oi")
bus = &"sounds"

[node name="sec" type="Timer" parent="."]
autostart = true
ignore_time_scale = true

[node name="loot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="loot"]
position = Vector2(11, 19)
shape = SubResource("CircleShape2D_sweqy")

[node name="hot_t" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="sec" to="." method="_on_sec_timeout"]
[connection signal="body_entered" from="loot" to="." method="_on_loot_body_entered"]
[connection signal="timeout" from="hot_t" to="." method="_on_hot_t_timeout"]
